--- a/treenote-backend/src/main/ui/src/index.css
+++ b/treenote-backend/src/main/ui/src/index.css
@@ -12,6 +12,33 @@ code {
     monospace;
 }
 
+.page-title{
+  color: #111; 
+  font-family: 'Open Sans Condensed', sans-serif; 
+  font-size: 30px; 
+  font-weight: 700; 
+  line-height: 48px; 
+  margin: 10 0 24px; 
+  padding: 0 30px; 
+  text-align: center; 
+  text-transform: uppercase; 
+}
+
+.page-box{
+  background-color: rgb(136, 188, 255);
+  margin-top: 5%;
+  padding: 1%;
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+}
+
+.notes-list{
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  background-color: rgb(255, 255, 136);
+  padding: 50px;
+}
+
 .note{
   background-color: rgb(231, 197, 44);
   margin-bottom: 10px;
@@ -29,12 +56,6 @@ code {
   justify-content: space-between;
 }
 
-.notes-list{
-  display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  margin-top: 5%;
-}
 
 .switch{
     width: 100%;
