--- a/treenote-backend/src/main/ui/src/components/Main/Main.css
+++ b/treenote-backend/src/main/ui/src/components/Main/Main.css
@@ -6,7 +6,8 @@ body,
   height: 100vh;
   overflow: hidden;
   font-size: 16px;
-  background: url(https://www.toptal.com/designers/subtlepatterns/patterns/lightpaperfibers.png);
+  color: white;
+  background: #0E0E10;
 }
 
 button {
@@ -20,11 +21,12 @@ button {
   color: #08c;
 }
 button:hover {
-  color: #04c;
+  color: white;
 }
 
 .App {
   display: flex;
+  margin-left:1%;
 }
 
 .app-main {
@@ -55,12 +57,14 @@ button:hover {
     display: block;
     border: 1px solid #ddd;
     margin-bottom: 20px;
-    width: 100%;
+    width: 96%;
     height: calc(50vh - 130px);
     padding: 10px;
     resize: none;
     font-size: inherit;
     font-family: inherit;
+    background: #464648;
+    color: white;
   }
   .app-main-note-edit input {
     height: 50px;
