--- a/treenote-backend/src/main/ui/src/components/Book/Book.css
+++ b/treenote-backend/src/main/ui/src/components/Book/Book.css
@@ -2,6 +2,7 @@
     width: 30%;
     height: 100vh;
     border-right: 1px solid #ddd;
+    background: #1F1F23;
   }
   
   .app-sidebar-Change-Button{
@@ -18,7 +19,7 @@
   .app-sidebar-Add-Button{
       background: none;
       border: 0;
-      margin: 0;
+      margin: right 10px;
       padding: 0;
       font-size: inherit;
       font-family: inherit;
@@ -60,10 +61,10 @@
   }
   
   .app-sidebar-note:hover {
-    background: #ddd;
+    background: #464648;
   }
   .app-sidebar-note.active,
   .app-sidebar-note.active small {
-    background: #08c;
+    background: #18181B;
     color: white;
   }
