--- a/treenote-backend/src/main/ui/src/components/sidebar/sidebar.css
+++ b/treenote-backend/src/main/ui/src/components/sidebar/sidebar.css
@@ -18,6 +18,7 @@
 .app-sidebar-Add-Button{
     background: none;
     border: 0;
+    margin: 0;
     padding: 0;
     font-size: inherit;
     font-family: inherit;
