--- a/treenote-backend/src/main/ui/src/components/Main/Main.css
+++ b/treenote-backend/src/main/ui/src/components/Main/Main.css
@@ -84,7 +84,7 @@ button:hover {
   }
   
   .markdown-preview {
-    padding: 0 25px 25px 25px;
+    padding: 10px 25px 25px 25px;
     font-size: 1rem;
     line-height: 2rem;
   }
